finish black theme + start back button

--- a/NotSteam/AddGame.resx
+++ b/NotSteam/AddGame.resx
@@ -117,4 +117,134 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAosAAAGrCAYAAACort28AAAABGdBTUEAALGPC/xhBQAAHOFJREFUeF7t
+        3QuQ3Vdh33H8Bmz8wMY4pFCaNC5NB5LQkpQWhnRCH2k7zWQy0ySEgdDSUoJjY542BvOyi82bMIR3kkLS
+        SSkQArX9v2uCwWCwsSyd/xUrWZXltRAY/c+VJT9l87Bvz9UeF9g9wZLuf6U9dz+fme9I9mB798z/8v/p
+        7u69DwMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACmM2jj+U3o3jEI8XOpDYO2257+epR+3ZX++lvp141N212Z
+        fv3QYDg694qNo1+NMZ6Q/3EAAGbFeDz+6Wa46zea4eg5aQA+L43Bj6axOD7QmhB/MAjdNen3F1y5cdc/
+        zP96AABqdN999505GMY/atp4/9Lh10fp33vDXBi9aOfOncfn/yQAAKvdoN31K4PQzZUG3kqURuPuQTt6
+        /bZt207KHwIAAKvNeDw+KY23jywdc4eqpu1ua0I8K30cR+cPCQCA1WDXrl1Pa0K3UBpxh7rJl6eHw+GT
+        84cGAMDhNBiOfq9pu/tKw+1wlT6e7+ZnGY/IHyYAAIfSZIg1bXxNaaytmkL38a1btx6XP2QAAA6FxaHY
+        vb040FZfX7zttttOzB86AAAraTIUJy+JUxhlq7jua6PR6FH5UwAAYCXsG4ptfNfyMbb6a9ru8+njPzZ/
+        KgAA9K1p48WlIVZNoftg/lQAAOhTE0YXFgdYZc2FXc/NnxIAAH2YC6PXlYZXjTUh3rF3797H508NAIBp
+        zNJQ/P+F7tP50wMA4GDN5FDMbd68+Vn50wQA4EANhvG1pZE1Q30xf6oAAByINTAU93XNNdc8LX/KAADs
+        jzSiLlg6qma2ED+aP20AAB5KGlBrZyimJj8Zffnll3vvaACAh5LG05oaig/WDHc9Ox8BAAAlTRtfUxpS
+        a6R35WMAAGCpNT4UU93Nk/e8zscBAMCD0lg6f/l4WntdGeIv5SMBAGAijSRDMde08eJ8LAAApIFkKP5I
+        aSzemI8GAGBtG4R4XmkwrfWuu+66M/MRAQCsTU2Iry4NJcXxZZdddnY+JgCAtcdQfMg+mY8KAGBtaYbd
+        qwrjSD9SE7qFfFwAAGuHobh/NW28fzweH52PDQBg9g3a7pWlYaRy27dvPyUfHQDAbDMUD7wY4wn5+AAA
+        Zlcaiq8ojSH9hEK83dv+AQAzrwmjlxfHkH5in/rUp76ejxAAYDYZigffl770pY/mYwQAmD2D4ejc0gjS
+        /jU/P/+ifJQAALPFUJy+hYWFJ+XjBACYHU07emlp/OhA6rb74RYAYOY0bTynPH50gL0nHykAwGxIA+fs
+        JYNHB9lwOHx6PlYAgPqlgWMo9tdmX4IGAGZGE+JZhcGjg2zypfx8tAAAdTMU+y2d5x1bt249MR8vAEC9
+        5obxJaXBo4OvaePF+XgBAOo1aLs/KI0dHXxpKN45Ho9PzUcMAFCnNBRfXBo7mq65MHpdPmIAgDqlQfOi
+        0tDRlIX4rfF4fHw+ZgCA+gyGo/9aHDqaumY4ek4+ZgCA+qQx819KI0c9FOIXvK4iAFCtph29sDhyNHVN
+        2923bdu2M/NRAwDUZRDifyqNHPVRd28z3PUb+agBAOqSh+IDy0eOpq+7+4qNo1/NRw0AUJe5Yfz9NGoM
+        xRWpu3duOHpWPmoAgLqkQfP8lKG4EoX4/cEw/no+agCAujRt97w0agzFlemB9evX/24+agCAuuTXUTQU
+        V6gbbrjhJfmoAQDq0rTxnNLAUT9df/31F+SjBgCoyyDE80oDR/20bt26N+WjBgCoSxNGF5YGjvrJM4oA
+        QJUmby+XxsxFS8eN+mtuGH2PIgBQn8lQbMLo0tLAUU+F+If5uAEA6rH4jOLorcWBo34ajs7Nxw0AUI/F
+        odi9rThw1FPdK/NxAwDUw5eeD0EhnpePGwCgHvueURzGtxQHjnqpaeNr8nEDANRlEOKbSwNH/TQXRq/L
+        Rw0AUBevo7jSdW/IRw0AUJc0Zs5fPm7UV03ovDMLAFCnJoxeXho46q2LJt8Lmo8bAKAeacicvWTYqMea
+        Nl5sKAIAVRq03YtLA0f9NBfiJYYiAFClph29sDRw1E+T16k0FAGAKqUx8/zUAz86btRno7caigBAlebC
+        ruemQWMorljd2wxFAKBKg3b0O00b7y+PHE1b03ZvNxQBgCqlIfM8Q3El84wiAFCp/MMsvvS8QnlGEQCo
+        1twwvqQ0cNRPhiIAUK2mjeeUBo76yVAEAKo1F0YvKw0c9ZXvUQQAKpWGzCvLA0d95BlFAKBaTYivLg0c
+        9ZVnFAGASqUxc/7ycaO+2rBhg7fwAwDqlMbMBUvHjfpr/fr1lxiKAECV5sLodaWBo36aC9FQBADqMxkw
+        g7Z7Q2ngqLf+u6EIAFRnMmCaNl5cGDfqqcn5GooAQHUWh2L39tLAUU+F+GZDEQCoThowR6Yx875l40a9
+        1Qy7NxqKAEB10oA5pmm7j5UGjvpq9Pp83AAA9dixY8cj0pj57PJxo75qwujCfNwAAPVIQ/HRgxC/Uho4
+        6qlhfG0+bgCAenx+2P1M08YbiwNH/RTiefm4AQDqMWh3/UoTulFx4KiXmmH3qnzcAAD1+Pz8bT/ftHF3
+        aeCor7pX5OMGAKjHeDx+fBqKO8oDR300F0Yvy8cNAFCPNBQfk8bM5qXjRv2Vhvg5+bgBAOqRhuKJacys
+        Wzpu1F9NiGfl4wYAqEcaipPXUfzi0nGjPuv+IB83AEA90lA8No2Zy5aPG/XVXBi9KB83AEA90lA8Oo2Z
+        /7103Ki/mnb0wnzcAAD1SEPxqEHoPl4aOOqlB5phfEE+bgCAeqSheGTTxg8XBo766YENGzY8Px83AEA9
+        0lA8Io2Z9y0ZN+qpNMLvT0Px9/JxAwDUYzIU05h5d2nkaPqaEH+wfv36383HDQBQj8Wh2L29NHI0fZOh
+        GEL4j/m4AQDqsfil59FbSyNHPRTi99MQ/6183AAA9dj3jGIYXVocOZq+NBTnQveb+bgBAOphKK5wIX5v
+        rh39h3zcAAD1MBRXtqbtvnvDDTf8+3zcAAD18D2KK1saive1bftv8nEDANRj3zOKfup5BevuDSH8q3zc
+        AAD1WHxGMb5r+cBRL4Vu73A4fHY+bgCAeix+j2J8b3HkaOqa0N0TQvgX+bgBAOqRhuKRTdu9vzRy1Efd
+        3cPh8Fn5uAEA6jEZimnMfKg8ctRDd4UQnpGPGwCgHmkoHtWE+CeFgaMeatp454YNG/5ZPm4AgHrsG4pt
+        97HSyNH0pRF+R9u2/zQfNwBAPdJQPDoNxb8ojRz1UIi333HHHb+cjxsAoB5pKB7ThPi/iiNH0xfintFo
+        9E/ycQMA1GMyFNOg+eSygaNeatrutttvv/2p+bgBAOqRhuKxg9D9VWnkqI+6XXv27PnFfNwAAPVIQ/G4
+        pu3+ujxyNG1N6EZpKP5CPm4AgHrsG4oh/p/SyNH0paEYd+/e/eR83AAA9UhD8eFp0Fy2dOCor7ouhPCP
+        8nEDANQjD8XLlw8c9VO3c35+/ufzcQMA1MNQXNmaNn5nOBw+KR83AEA9DMWVrQnx1rZt/0E+bgCAekx+
+        mCUNGt+juFKF+O3Ph9GZ+bgBAOqRhuKxadB8dtnAUT+F+K1mPv79fNwAAPVIQ/EYL7i9cjVt3GEoAgBV
+        SkPx6DRoPrF04Ki3vvk3G7ufzccNAFCPNBSPGoTuzwsDR73UbR8Ohz+TjxsAoB5pKB6ZBs1Hlg8c9VO3
+        vW3bv5ePGwCgHmkoHjEYxj8qjxxNWxO6WzZs2PDEfNwAAPWYDMUmxPeWRo6mLw3FhU2bNv3dfNwAAPXY
+        96Xn0H2gNHLUR93NhiIAUKXJUGza+OHyyNH0dTfPz88/IR83AEA9/DDLirfZUAQAqmQorniXr1u37pH5
+        uAEA6rE4FLsPFQaOeqgJ8Qfz8/Nn5OMGAKjH4vcodu8vjRz1VIghHzcAQD3SUDwijZn3LRs36rv/kY8c
+        AKAOeSi+Z8moUZ+F+O25YXxJOutT8rEDAKx+k6HYhO4dxYGjqWva7rtNGy9O53xCPnIAgDosDsXRpaWR
+        o+lrQrx1z549v5CPGwCgHvuGYhsvLo0c9dNcu+vX8nEDANRjMhQHIb65NHDUU8P4lsk55yMHAKjHoO3e
+        UBw46qWm7dp81AAchPSH7aNuvfXW03bu3Hl8/lvAoWIoHqJC/EoT4tcnpb++XpK0X62bvB7tIHR70+/3
+        /f9p08Yd6Q/hf5H+/m+PRqNH5dsZ0Ld936M47N744INPkqTaWnyFie7K9PuLJi9HtmnTpuctLCw8PN/q
+        gIPlexQlSbNb97X5+XkvTwYHa99QHMa3lB9gkiTNQKG7Zi7ESyal8fjidO87Ot8GgZ9k8RnF7p3FB5Yk
+        STPa5PvF0z3wzHw7BErSg+TIQTv649KDSJKk2a+7e/fu3b+Tb4vAj5oMxaaNHy4/eCRJWjtN3qlscl/M
+        t0jAUJQkaVmfTPdHPzUN6YFw9CB0Hy88SCRJWtM1IV6V7pNep5G1a/InpqbtPlN6gEiSpH2v0/jVdL88
+        Md86Ye1IF/4J6QHw+dIDQ5Ik/bCmjVen++Yj8y0UZt/CwsLJkz8plR4QkiSpUIifS4PRazEy+7Zs2XJa
+        uuA3FB8IkiTpb60J8b35dgqz6eabb35sE7pvlB4AkiTpoWuG8QX5tgqzZWFh4Yx0kW9eetFLkqT9r2nj
+        nePx+LH59gqz4aabbjo9XeCbll7wkiTpwEuD8d35Fgv12759+ylN27Wli12SJB1M3b133XXX6flWC/Xa
+        uXPn8emC/lr5QpckSQdbM+zemG+3UKf5+flj08V82dKLW5IkTV8Tujj2doDUKl28x6UL+bNLL2xJktRf
+        Tds9L996oR6TV5hv2tiULmpJktRfTYhfz7dfqEMaiidM3vS8dEFLkqT+a8KuX863YVjd0lD0Fn6SJB3q
+        QvfxfCuG1SsNxVPTBbtu2QUsSZJWthC/981vfvNx+ZYMq08aio8dtN2weAFLkqQVrwmjS/NtGVaXe+65
+        53HpIvUWfpIkHc5C/EK+NcPqsXfv3sc3IW4tXrSSJOlQ9qV8e4bV4d57733CoO22FS5WSZJ0qAvdNfkW
+        DYdfHoo3Fy9WSZJ0yGtCd12+TcPhNfnSs6EoSdLqqmnjDflWDYfP5IdZ0sV4U+kilSRJh68mxPX5dg2H
+        T9N2nyldoJIk6fBmLLIqeJkcSZJWZ94jmlVj8gLcTei+UbpQJUnS4alp49X5Vg2HXxqMj2nari1drJIk
+        6bB0Wb5Nw+qQBuNpgxA3FC5WSZJ0iGva7mP5Fg2rRxqMj578qH7popUkSYeuuRAvybdnWF3SYDwlXaTX
+        L71oJUnSoWsujF6Ub82w+qTBePLkp7BKF68kSVr5rgzxGfm2DKvT4mDsritdwJIkaeVqQvxBjPGEfEuG
+        1SsNxpMMRkmSDnXdtflWDKufwShJ0qFtLoxel2/DUAffwyhJ0qFr27ZtP5dvwVCPyWBMF7CfkpYkaQVr
+        Qrwq33qhPgsLC5PBuG7phS1Jkvppbhj/bb7tQp22b99+ihfuliRpBQrdNePx+Ih8y4V67dix49FNiOuL
+        F7okSTrgmjbef/vtt//jfKuF+m3evPnUQYihdMFLkqQDqwmjS/MtFmbHZDA2bdeWLnpJkrR/NSFuHY/H
+        x+XbK8yWrVu3PmbQdsPSxS9Jkvan7sX5tgqzaTIYm9B9o/wAkCRJf2shfm88Hp+Wb6kwu2666abT02Cc
+        Lz4QJElSudC9M99KYfalPxk9Nl34m5Y9ECRJ0o/VhHjHoO3ekO6dR+XbKKwN6aI/o2njjaUHhiRJig+k
+        zr5qPD463zph7bnnnnt+Kv2JacuSB4ckSRrG1+bbJaxtaTA+zmCUJOnHWjf2jCL80GQwDkL8v4UHiyRJ
+        a6qm7e67YmP3lHyLBB6U/gT105MXGy09cCRJWht1u5qNo3+Xb43AUnv37jUYJUlrrqaNTTPc9Wxfeob9
+        kAbj3zEYJUlro+7aNBSfmW+BwP6afEna9zBKkma2EEPTdr+V7ndH5FsfcKAWX1bHO71IkmagEL+Vfr2o
+        CfGsW2655alGIvQkPZhOH7TdxmUPOvVeGuaj9Ou61PWStBZKw+3r5brrHmzyZeLc1yY1bffVQeiuWSx+
+        pWnjl1NX5//NxvTPb02/bkv/uzb9Ny6fC/GS7du3/5rvRYQVlB5gp02erk8PuuLI0fTddtttV6ZzfmQ+
+        cgCAuqQhc2r609r60tBRH3XDu++++7H5uAEA6pMG46PTsJl8mbQwdjRtk/fpToPxjHzcAAD1SYPxlDRs
+        DMaVa7PBCABULQ/GyTcnl8aOps9gBADqlgbjyWnUGIwr1yaDEQCo2sLCgsG4sm3auHGjH3oBAOplMK54
+        BiMAUDeDccUzGAGAuhmMK9vkbRcNRgCgagbjymYwAgDVmwzGyft6lsaOps9gBACqtzgYJ2/+Xh48mq7J
+        YGzb9vR83AAA9dm2bdtJg7a7tjR2NH1pMH7DYAQAqjYej08chO6a0tjR9BmMAED10mB8VNPGq0tjR33U
+        bTQYAYCqpcF4/CDEL5THjqbPYAQAKpcG4yOaNl5RHjuaPoMRAKhcGozHpcH4qfLY0fR1G9evX/+YfNwA
+        APVJg/Hopu0+Vh47mj6DEQCoXBqMR6Vh82fLh476yWAEACo3GYxN2/3P8tjR9BmMAEDl0mA8Jg3Gvy6P
+        HU2fwQgAVC4Nxoc3IV5VHjuaPoMRAKhcGownNm28oTx2NH3d0GAEAKqWBuPpTYhbymNH09cN77rrLoMR
+        AKhXGoxPSMPmm8uHjvrJYAQAKnffffedmUbNzvLY0fR1wzvvvPO0fNwAAPUZj8cnD0L3wfLY0fQZjADA
+        DBgMR+eWx46mz2AEAGZAE0aXlseOps9gBAAqN568NWCIg/LY0fR1wy1bthiMAEC9JmOmCd0t5bGjaWva
+        rjUYAYCqXTnc/eQmxDtKY0fTZzACANW7+eabnzlou7tLY0fTZzACANVLY+ZpTRu/Uxo7mj6DEQCo3sLC
+        whlp2KxbOnTUTwYjAFC9bdu2ndS08erS2NH0GYwAQPVuvfXWR3pZnZVrMhjXrVtnMAIA9RqPx8elUfOZ
+        0tjR9BmMAED10mA8ZhDiX5bGjnooxGAwAgBV2/dOL238s2VDR/1kMAIAtUuD8chB6D5YHDuavjQY/dAL
+        AFC1NBiPaEJ8b3HsaOp8DyMAUL3Fwdi9ozR21EO+JA0A1G4yGOdCvKQ4djR9aTBu3rz51HzcAAD1mQzG
+        NGreXBw7mj6DEQCYBU0YXVgcO5o+gxEAmAVp2Jy/bOionwxGAGAWDNruFcWxo+kzGAGAWTAYjs4tjh1N
+        XxqMd955p8EIANRt0HYfKo4dTZ/BCADUbrzvvaS7TxfHjqbPYAQAapcH458Xx46mz2AEAGqXBuORTRhd
+        Whw7mr4QNxiMAED1mjaeUxw7mj6DEQCYBWnY/OdlQ0f9lAajl9UBAKrnexhXMIMRAKjdtm3bfi4Nxr3F
+        saPpMxgBgNpt2bLlN9Oo+X5x7Gj6DEYAoHaDjd2/TKPm9uLY0fQZjABA7RYWFp40aLvtxbGj6UuDcX5+
+        /tH5uAEA6rN169afTaNmT3HsaOqaENc383cYjABAvSZfkm7a+J3S2NH0TQajZxgBgKqNx+PT0rC5fOnQ
+        UT8ZjABA9dJgPKpp47tLY0fTZzACANVLg/GIQTt6fWnsaPoMRgBgJhiMK5fBCABUb/IMY9N2by+NHU1f
+        08YbDEYAoGr7BmOIf1oaO5q+yWAcDoen5OMGAKhPGozHDEL8XGnsaPoMRgCgemkwPjKNmi+Xxo6mz2AE
+        AKqXBuPJk1FTGjuaPoMRAKheGoynTt7vuDR21EvrDEYAoGppMJ7ShHhVYeion643GAGAqu37oZd29MeF
+        oaN+uv722283GAGAeqXBeEQaNRcsGTnqr+v37Nlzcj5uAIA6pVFz9pKRo/4yGAGA+jUhnlUYOuqhdLZf
+        NxgBgOo17eilpbGj6TMYAYCZMAjxvNLY0fQ1obtu9+7dJ+WjBgCoUxo2Fy0dOuqnyWBct26dwQgA1Cv/
+        lPS7lg4d9VV3rcEIAFRt32AM3QfKY0fTZzACAJVLg/HIQYgfLY8dTV/3tWuvvfbEfNwAAPXZNxjb+JHl
+        Q0f9ZDACAJWbDMam7d5fHjuatnS2X926davBCADUK38P4ztLY0fTNxmMnmEEAKq2bzB6WZ2VK3TX3Hjj
+        jY/Kxw0AUKc0bM5fNnTUTwYjADALBsPRucWxo+kL8SsGIwBQvblhfElx7GjqmjZ+2WAEAKrXhO6/lcaO
+        pm8yGOfn50/IRw0AUCeDceVKg/FqgxEAqJ4vSa9cBiMAMBPmwuhlpbGjXvpS27bH56MGAKjTYBhfWxg6
+        6qcvGowAQNW8cPfK1oR4lcEIAFRtMhjnQrykNHbUR93f7Nix4xH5uAEA6rP4DOPoreWxox56Xz5qAIA6
+        TQZjE0aXFoaOeujK0P3rfNQAAHXyJemVq2njjm3btp2UjxoAoE77nmFs48WlwaMpC90H8jEDANRr8UvS
+        3ZuKg0dTdcXwtqfnYwYAqFf+oZfXlwaPpmpdOtsj8zEDANTNC3f331zY9dx8vAAA9Wva+JrS6NHBlc7z
+        pvF4fHQ+XgCA+g1CPK80fHSQhfjb+WgBAGaDwdhfTRuvzscKADA70tC5YOnw0cG1YcOGJ+ZjBQCYHc2w
+        e2Np/OgAC/EP85ECAMyOxZfV6d5WHEA6kD6RjxQAYLZMBmMTuncUBpD2u257Osdj85ECAMyWxcE4urQ8
+        hLQ/zc/PX5iPEwBg9ix+STpetHQEaf9qQhfTGXpHFwBgdu17htEPvRx0t9xyy0/lowQAmF3eS/rgWlhY
+        OCMfIQDAbPNe0gdWE+IPxuPxUfn4AABmXxpBXrh7v+t25WMDAFg70hA6f/kw0rJC/P54PD4mHxsAwNrh
+        vaQfuibEWyc/IJSPDABgbUlj6NWlkaRc6D6djwoAYG0yGH9S3SvzMQEArF3NsHtVeSyt7a4M8Rn5iAAA
+        1jaD8cdr2u67CwsLD8/HAwCAwfjDmjZ+OR8LAAAPMhgXa0L3pnwkAAD8KIMxjuc2dP88HwcAAEut7cHY
+        7fI2fwAAD2HtDsbuQ/kIAAD4SdbiYGza+Mz86QMA8FDW1mDsNnqLPwCAA7RWBmMzHD0nf8oAAByIWR+M
+        TRtv8IMtAABTmNnBGOL3N23a9NT8aQIAcLAGbffK4uCquCaMLsyfHgAA00qD8RWl0VVjTYhbx+PxI/Kn
+        BgBAH2ZhMDZtvN+7tQAArJAmjF5eGmG1NPkezPypAACwEgbD0bmlIbbaa0L8U6+pCABwCDTt6KWlQbZq
+        C92n01A8On/4AACstDTCzl42ylZjIf5lGorH5g8bAIBDpWnjOcWBtloK3Tu98DYAwGG0Gl+4u2m7+5ph
+        fEH+EAEAOJzmhvH3JwOtNNwOdU2IW0IIv5Q/NAAAVoPxePyUNNbWLR1vh7I0WN+/c+fO4/OHBADAajL5
+        /sC5sOu5Tei+URpzK1X67y00w13Pzh8GAACrWRqNR1wxvO3pTRvfnbqpNPD6aPKOLGkovsOziQAAFbti
+        w54nTn7gpGm7jw1C/HZp+O1PaRjekn59TxPiWU0YXTg3H38x/ycAAJgF+5513Ng9ZdCOXj8I3VwakFcu
+        /hqbNAQvS7//q8lrI6ZB+CdpHF43aLvt6e9/YjCMv57+2SPzvwYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABg
+        hjzsYf8POoqCNXRvboAAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
