--- a/NotSteam/Properties/Resources.resx
+++ b/NotSteam/Properties/Resources.resx
@@ -187,7 +187,7 @@
   <data name="It Takes Two" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\it tales .jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Kingdom Come: Deliverance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Kingdom Come Deliverance" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kingdom.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="New World" type="System.Resources.ResXFileRef, System.Windows.Forms">
