--- a/NotSteam/Profile.resx
+++ b/NotSteam/Profile.resx
@@ -991,34 +991,36 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABA
-        BgAAAk1TRnQBSQFMAwEBAAEoAQABKAEAAR0BAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABdAMA
-        ARgDAAEBAQABIAUAAYABK/8A/wAQAAMJAQwDGAEg/wDFAAMNAREBgAF7AXUB2wHSAccBrwH8AysBQv8A
-        vQAEAgFcAVsBWQG1AeoB0QG5Af8B6gHRAbkB/wNMAY7/AL0AA0gBgwHqAdEBuQH/AeoB0QG5Af8B6gHR
-        AbkB/wMxAU3/ALkAAzMBUAHgAccBrwH+AeoB0QG5Af8B6gHRAbkB/wNOAZX/ALkAAx4BKwGyAaMBmAHy
-        AeoB0QG5Af8B6gHRAbkB/wFlAWQBYgHEAwUBBv8AtQADCwEOAXcBcgFvAdYB6gHRAbkB/wHqAdEBuQH/
-        AZQBiwGDAeYDEwEZ/wC1AAQBA1oBsQHqAdEBuQH/AeoB0QG5Af8B0AG4AaoB+QMoATv/ALkAA0YBfQHq
-        AdEBuQH/AeoB0QG5Af8B6gHRAbkB/wM+AWr/ALkAAzEBTAHbAcIBuQH9AeoB0QG5Af8B6gHRAbkB/wHW
-        AcIBpQH7AWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHC
-        AWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAmIBYAHBA00BkwMCAQP/AHUAAxoBJAGnAZwBjgHv
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADw
+        BQAAAk1TRnQBSQFMAwEBAAFQAQABUAEAAR0BAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABdAMA
+        ARgDAAEBAQABIAUAAYABK/8A/wAQAAMJAQwDGAEg/wDFAAMNAREBZwFmAWUB2wHIAb0BowH8AysBQv8A
+        vQAEAgNXAbUB6gHRAbkB/wHqAdEBuQH/A0wBjv8AvQADSAGDAeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
+        AzEBTf8AuQADMwFQAdYBvQGlAf4B6gHRAbkB/wHqAdEBuQH/A04Blf8AuQADHgErAZMBjAGEAfIB6gHR
+        AbkB/wHqAdEBuQH/A1wBxAMFAQb/ALUAAwsBDgJkAWMB1gHqAdEBuQH/AeoB0QG5Af8BcwFxAW8B5gMT
+        ARn/ALUABAEDVwGxAeoB0QG5Af8B6gHRAbkB/wG4AakBlgH5AygBO/8AuQADRgF9AeoB0QG5Af8B6gHR
+        AbkB/wHqAdEBuQH/Az4Bav8AuQADMQFMAcwBvgG5Af0B6gHRAbkB/wHqAdEBuQH/AccBrwGaAfsDWgHC
+        A1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNcAcEDTQGT
+        AwIBA/8AdQADGgEkAYYBfwF3Ae8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
         AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHR
         AbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wMtAUT/AHUAAxsBJQGlAZkBjQHu
+        Ay0BRP8AdQADGwElAYUBfQF5Ae4B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
         AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHR
         AbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wMtAUT/AHkAAy8BSQHSAccBrwH8
-        AeoB0QG5Af8B6gHRAbkB/wHSAcYBrwH8AWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHC
-        AWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCAWQCYQHCA0wBkAQC
-        /wB9AANEAXsB6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8DQAFu/wC9AAQBAVkCWAGvAeoB0QG5Af8B6gHR
-        AbkB/wHTAboBqQH6AykBPv8AvQADCwEOAXsBdQFwAdkB6gHRAbkB/wHqAdEBuQH/AZcBjQGEAegDFgEd
-        /wC9AAMdASgBqQGcAZAB8AHqAdEBuQH/AeoB0QG5Af8BagFpAWcBygMGAQj/AL0AAzIBTwHgAccBrwH+
-        AeoB0QG5Af8B6gHRAbkB/wNRAZz/AMEAA0cBggHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wMzAVH/AL0A
-        BAIBXAFbAVkBtQHqAdEBuQH/AeoB0QG5Af8DSwGN/wDBAAMNAREBgAF7AXUB2wHSAcYBrwH8AysBQv8A
-        xQADCQEMAxYBHv8A/wD/AG8AAUIBTQE+BwABPgMAASgDAAF0AwABGAMAAQEBAAEBBQABgAEBFgAD/wEA
-        A/8B+AwAAf8B5wH/AfgMAAH/AcMB/wH4DAAB/wGDAf8B+AwAAf8BgwH/AfgMAAH/AQcB/wH4DAAB/gEH
-        Af8B+AwAAfwBDwH/AfgMAAH4AR8B/wH4DAAB+AE/Af8B+AwAAfACAAE4DAAB4AIAATgMAAHgAgABOAwA
-        AfACAAE4DAAB+AE/Af8B+AwAAfgBHwH/AfgMAAH8AQ8B/wH4DAAB/gEHAf8B+AwAAf8BBwH/AfgMAAH/
-        AYMB/wH4DAAB/wGDAf8B+AwAAf8BwwH/AfgMAAH/AecB/wH4DAAD/wH4DAAL
+        Ay0BRP8AeQADLwFJAcgBvQGjAfwB6gHRAbkB/wHqAdEBuQH/AcgBvAGjAfwDWgHCA1oBwgNaAcIDWgHC
+        A1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDTAGQBAL/AH0AA0QBewHq
+        AdEBuQH/AeoB0QG5Af8B6gHRAbkB/wNAAW7/AL0ABAEDVQGvAeoB0QG5Af8B6gHRAbkB/wG8AaoBnwH6
+        AykBPv8AvQADCwEOAWQBYgFhAdkB6gHRAbkB/wHqAdEBuQH/AXYBcgFwAegDFgEd/wC9AAMdASgBiAGB
+        AXoB8AHqAdEBuQH/AeoB0QG5Af8DXQHKAwYBCP8AvQADMgFPAdYBvQGlAf4B6gHRAbkB/wHqAdEBuQH/
+        A1EBnP8AwQADRwGCAeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AzMBUf8AvQAEAgNXAbUB6gHRAbkB/wHq
+        AdEBuQH/A0sBjf8AwQADDQERAWcBZgFlAdsByAG8AaMB/AMrAUL/AMUAAwkBDAMWAR7/AP8A/wBvAAFC
+        AU0BPgcAAT4DAAEoAwABdAMAARgDAAEBAQABAQUAAYABARYAA/8BAAP/AfgMAAH/AecB/wH4DAAB/wHD
+        Af8B+AwAAf8BgwH/AfgMAAH/AYMB/wH4DAAB/wEHAf8B+AwAAf4BBwH/AfgMAAH8AQ8B/wH4DAAB+AEf
+        Af8B+AwAAfgBPwH/AfgMAAHwAgABOAwAAeACAAE4DAAB4AIAATgMAAHwAgABOAwAAfgBPwH/AfgMAAH4
+        AR8B/wH4DAAB/AEPAf8B+AwAAf4BBwH/AfgMAAH/AQcB/wH4DAAB/wGDAf8B+AwAAf8BgwH/AfgMAAH/
+        AcMB/wH4DAAB/wHnAf8B+AwAA/8B+AwACw==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>28</value>
+  </metadata>
 </root>
