update to fucking visual studio

--- a/NotSteam/Profile.resx
+++ b/NotSteam/Profile.resx
@@ -991,33 +991,33 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADw
-        BQAAAk1TRnQBSQFMAwEBAAFQAQABUAEAAR0BAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABdAMA
-        ARgDAAEBAQABIAUAAYABK/8A/wAQAAMJAQwDGAEg/wDFAAMNAREBZwFmAWUB2wHIAb0BowH8AysBQv8A
-        vQAEAgNXAbUB6gHRAbkB/wHqAdEBuQH/A0wBjv8AvQADSAGDAeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        AzEBTf8AuQADMwFQAdYBvQGlAf4B6gHRAbkB/wHqAdEBuQH/A04Blf8AuQADHgErAZMBjAGEAfIB6gHR
-        AbkB/wHqAdEBuQH/A1wBxAMFAQb/ALUAAwsBDgJkAWMB1gHqAdEBuQH/AeoB0QG5Af8BcwFxAW8B5gMT
-        ARn/ALUABAEDVwGxAeoB0QG5Af8B6gHRAbkB/wG4AakBlgH5AygBO/8AuQADRgF9AeoB0QG5Af8B6gHR
-        AbkB/wHqAdEBuQH/Az4Bav8AuQADMQFMAcwBvgG5Af0B6gHRAbkB/wHqAdEBuQH/AccBrwGaAfsDWgHC
-        A1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNcAcEDTQGT
-        AwIBA/8AdQADGgEkAYYBfwF3Ae8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHR
-        AbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        Ay0BRP8AdQADGwElAYUBfQF5Ae4B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHR
-        AbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/
-        Ay0BRP8AeQADLwFJAcgBvQGjAfwB6gHRAbkB/wHqAdEBuQH/AcgBvAGjAfwDWgHCA1oBwgNaAcIDWgHC
-        A1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDTAGQBAL/AH0AA0QBewHq
-        AdEBuQH/AeoB0QG5Af8B6gHRAbkB/wNAAW7/AL0ABAEDVQGvAeoB0QG5Af8B6gHRAbkB/wG8AaoBnwH6
-        AykBPv8AvQADCwEOAWQBYgFhAdkB6gHRAbkB/wHqAdEBuQH/AXYBcgFwAegDFgEd/wC9AAMdASgBiAGB
-        AXoB8AHqAdEBuQH/AeoB0QG5Af8DXQHKAwYBCP8AvQADMgFPAdYBvQGlAf4B6gHRAbkB/wHqAdEBuQH/
-        A1EBnP8AwQADRwGCAeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AzMBUf8AvQAEAgNXAbUB6gHRAbkB/wHq
-        AdEBuQH/A0sBjf8AwQADDQERAWcBZgFlAdsByAG8AaMB/AMrAUL/AMUAAwkBDAMWAR7/AP8A/wBvAAFC
-        AU0BPgcAAT4DAAEoAwABdAMAARgDAAEBAQABAQUAAYABARYAA/8BAAP/AfgMAAH/AecB/wH4DAAB/wHD
-        Af8B+AwAAf8BgwH/AfgMAAH/AYMB/wH4DAAB/wEHAf8B+AwAAf4BBwH/AfgMAAH8AQ8B/wH4DAAB+AEf
-        Af8B+AwAAfgBPwH/AfgMAAHwAgABOAwAAeACAAE4DAAB4AIAATgMAAHwAgABOAwAAfgBPwH/AfgMAAH4
-        AR8B/wH4DAAB/AEPAf8B+AwAAf4BBwH/AfgMAAH/AQcB/wH4DAAB/wGDAf8B+AwAAf8BgwH/AfgMAAH/
-        AcMB/wH4DAAB/wHnAf8B+AwAA/8B+AwACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADi
+        BQAAAk1TRnQBSQFMAwEBAAFgAQABYAEAAR0BAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABdAMA
+        ARgDAAEBAQABIAUAAYABK/8A/wAQAAMJAQwDGAEg/wDFAAMNAREDZAHbAcQBuQGdAfwDKwFC/wC9AAQC
+        A1cBtQHqAdEBuQH/AeoB0QG5Af8DTAGO/wC9AANIAYMB6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8DMQFN
+        /wC5AAMzAVAB0gG5AaEB/gHqAdEBuQH/AeoB0QG5Af8DTgGV/wC5AAMeASsBjAGFAX0B8gHqAdEBuQH/
+        AeoB0QG5Af8DXAHEAwUBBv8AtQADCwEOA2EB1gHqAdEBuQH/AeoB0QG5Af8BbwFsAWoB5gMTARn/ALUA
+        BAEDVwGxAeoB0QG5Af8B6gHRAbkB/wGyAaEBkQH5AygBO/8AuQADRgF9AeoB0QG5Af8B6gHRAbkB/wHq
+        AdEBuQH/Az4Bav8AuQADMQFMAcYBvgG5Af0B6gHRAbkB/wHqAdEBuQH/AcEBpwGYAfsDWgHCA1oBwgNa
+        AcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNcAcEDTQGTAwIBA/8A
+        dQADGgEkAX8BdwFzAe8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5
+        Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHq
+        AdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/Ay0BRP8A
+        dQADGwElAXwBdwF0Ae4B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5
+        Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHq
+        AdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8B6gHRAbkB/wHqAdEBuQH/Ay0BRP8A
+        eQADLwFJAcQBuQGdAfwB6gHRAbkB/wHqAdEBuQH/AcQBuAGdAfwDWgHCA1oBwgNaAcIDWgHCA1oBwgNa
+        AcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDWgHCA1oBwgNaAcIDTAGQBAL/AH0AA0QBewHqAdEBuQH/
+        AeoB0QG5Af8B6gHRAbkB/wNAAW7/AL0ABAEDVQGvAeoB0QG5Af8B6gHRAbkB/wGyAaYBmwH6AykBPv8A
+        vQADCwEOA2EB2QHqAdEBuQH/AeoB0QG5Af8BcAFuAWsB6AMWAR3/AL0AAx0BKAF/AXkBdgHwAeoB0QG5
+        Af8B6gHRAbkB/wNdAcoDBgEI/wC9AAMyAU8B0gG5AaEB/gHqAdEBuQH/AeoB0QG5Af8DUQGc/wDBAANH
+        AYIB6gHRAbkB/wHqAdEBuQH/AeoB0QG5Af8DMwFR/wC9AAQCA1cBtQHqAdEBuQH/AeoB0QG5Af8DSwGN
+        /wDBAAMNAREDZAHbAcQBuAGdAfwDKwFC/wDFAAMJAQwDFgEe/wD/AP8AbwABQgFNAT4HAAE+AwABKAMA
+        AXQDAAEYAwABAQEAAQEFAAGAAQEWAAP/AQAD/wH4DAAB/wHnAf8B+AwAAf8BwwH/AfgMAAH/AYMB/wH4
+        DAAB/wGDAf8B+AwAAf8BBwH/AfgMAAH+AQcB/wH4DAAB/AEPAf8B+AwAAfgBHwH/AfgMAAH4AT8B/wH4
+        DAAB8AIAATgMAAHgAgABOAwAAeACAAE4DAAB8AIAATgMAAH4AT8B/wH4DAAB+AEfAf8B+AwAAfwBDwH/
+        AfgMAAH+AQcB/wH4DAAB/wEHAf8B+AwAAf8BgwH/AfgMAAH/AYMB/wH4DAAB/wHDAf8B+AwAAf8B5wH/
+        AfgMAAP/AfgMAAs=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
